kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: project-331-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dev
    nginx.org/websocket-services: "ws"
    nginx.ingress.kubernetes.io/limit-connections: "100"
    nginx.ingress.kubernetes.io/limit-rps: "20"
    nginx.ingress.kubernetes.io/limit-rpm: "500"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
      grpc_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
spec:
  rules:
    - http:
        paths:
          - path: /api
            backend:
              serviceName: headless-lms
              servicePort: 3001
          - path: /example-exercise
            backend:
              serviceName: example-exercise
              servicePort: 3002
          - path: /cms
            backend:
              serviceName: cms
              servicePort: 3000
          - path: /
            backend:
              serviceName: course-material
              servicePort: 3003
